--- a/frontend/src/styles/estilo.css
+++ b/frontend/src/styles/estilo.css
@@ -15,12 +15,21 @@ html, body {
   /********************** NAV **********************/
 
   .navbar {
-    margin: 0 20px;
+    padding: 0 20px;
+  }
+
+  .nav-logo-div {
+    max-width: 50%;
+  }
+
+  .nav-logo {
+    width: 200px;
+    /* max-width: 50%; */
   }
   
   .nav-link {
     font-family: Roboto, sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     color: #000000 !important;
   }
   
@@ -35,14 +44,14 @@ html, body {
   }
   
   .btn-login {
-    width: 250px;
-    height: 60px;
-    line-height: 50px;
+    width: 200px;
+    height: 50px;
+    line-height: 40px;
     background-color: #34a853;
     border: none;
     border-radius: 73px;
     font-family: Roboto, sans-serif;
-    font-size: 24px;
+    font-size: 20px;
   }
   
   .btn-login a {
@@ -71,14 +80,16 @@ html, body {
   }
   
   @media screen and (min-width:300px) and (max-width:991px) {
+
+
     .nav-item {
-        background-color: #ffffff;
+      background-color: #ffffff;
     }
   
     .navbar-nav {
-        width: 100%;
-        display: block;
-        text-align: center;
+      width: 100%;
+      display: block;
+      text-align: center;
     }
   
     .btn-login {
@@ -105,6 +116,14 @@ html, body {
   .active {
     letter-spacing: 1px;
     font-weight: bold;
+  }
+
+  @media screen and (min-width:300px) and (max-width:401px) {
+
+    .navbar {
+      padding: 0 5px !important;
+    }
+
   }
   
   /****************** SECAO *********************/
