--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /*************** SECAO1 ***************/
 #secao1 {
   background-color: #FFFFFF;
@@ -34,7 +33,7 @@
   padding-left: 50px;
   margin-top: -40px;
 }
-
+.cls-1 {fill:#4285f4};
 @media screen  and (min-width:771px) and (max-width:820px) {
 
   html{
@@ -203,6 +202,10 @@
   float: right;
 }
 
+.cls-2{
+  fill:#FFFFFF;
+}
+
 @media screen and (max-width:700px) {
   .container-desktop {
     display: none;
@@ -286,6 +289,15 @@
 #secao4 {
   background-color: #4285F4;
   height: auto;
+}
+
+.titulo4 {
+  margin-top:10px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 50px;
+  color: white;
+  font-weight: bold;
 }
 
 .sobre-multilinguagem{
