--- a/frontend/src/styles/cursos.css
+++ b/frontend/src/styles/cursos.css
@@ -1,3 +1,33 @@
+#secao1 {
+  background-color: #FBBC05;
+  height: auto;
+}
+
+#divisoria {
+  background-color: #FBBC05;
+  width: 100%;
+  height: 100%;
+}
+
+.sobre-lab {
+  padding-top: 90px;
+}
+
+.titulo-lab {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.desc-lab {
+  padding-top: 20px;
+  font-size: 20px;
+}
+
+.img-lab {
+  height: 19em;
+  padding-left: 50px;
+}
+
 .container-exps {
   padding-left: 10%;
   padding-right: 10%;
