--- a/frontend/src/styles/quemsomos.css
+++ b/frontend/src/styles/quemsomos.css
@@ -16,7 +16,10 @@ a:hover {
   position: relative;
 }
 
+
+
 #divisoria {
+  background-color: #4285F4;
   width: 100%;
   height: 100%;
 }
@@ -173,7 +176,9 @@ a:hover {
 
 
 .titulo-alunos {
-  padding-top: 100px;
+  
+  padding: 0px 0px;
+  margin-bottom: 2px;
 }
 
 .card-aluno {
