--- a/frontend/src/styles/cursos.css
+++ b/frontend/src/styles/cursos.css
@@ -1,9 +1,9 @@
-#secao1 {
+#secao1Cursos {
   background-color: #FBBC05;
   height: auto;
 }
 
-#divisoria {
+#divisoriaCursos {
   background-color: #FBBC05;
   width: 100%;
   height: 100%;
