--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,7 +1,10 @@
 /*************** SECAO1 ***************/
+
 #secao1 {
   background-color: #FFFFFF;
   height: auto;
+  margin-bottom: -75px;
+  
 }
 
 .divisoria {
@@ -12,7 +15,7 @@
 .divisoria1 {
   width: 100%;
   height: 100%;
-}
+  }
 
 .sobre-lara {
   padding-top: 80px;
@@ -33,7 +36,7 @@
   padding-left: 50px;
   margin-top: -40px;
 }
-.cls-1 {fill:#4285f4};
+.cls-1a {fill:#4285f4};
 @media screen  and (min-width:771px) and (max-width:820px) {
 
   html{
@@ -150,7 +153,7 @@
 /************** SECAO2 ****************/
 #secao2 {
   background-color: #4285f4;
-}
+  }
 
 .container {
   height: 100%;
