--- a/frontend/src/styles/estilo.css
+++ b/frontend/src/styles/estilo.css
@@ -1,148 +1,149 @@
 html, body {
-    margin: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  font-family: Roboto, sans-serif;
+}
+
+p {
+  text-align: justify;
+}
+
+/********************** NAV **********************/
+
+.navbar {
+  padding: 0 20px;
+}
+
+.nav-logo-div {
+  max-width: 50%;
+  margin: 10px 0 10px 20px;
+}
+
+.nav-logo {
+  width: 200px;
+}
+
+.nav-link {
+  font-family: Roboto, sans-serif;
+  font-size: 20px;
+  color: #000000 !important;
+}
+
+.nav-link:hover {
+  color: #4285f4!important;
+  transition-property: all;
+  transition-duration: 0.5s;
+}
+
+.nav-toggle {
+  border: none;
+}
+
+.btn-login {
+  width: 200px;
+  height: 50px;
+  line-height: 40px;
+  background-color: #34a853;
+  border: none;
+  border-radius: 73px;
+  font-family: Roboto, sans-serif;
+  font-size: 20px;
+  margin: 0 50px 0 0;
+}
+
+.btn-login a {
+  color: #FFFFFF;
+}
+
+.btn-login:hover{
+  background-color: #25803E;
+  color: #FFFFFF;
+}
+
+.btn-login a:hover {
+  text-decoration: none;
+}
+
+.btn-menu {
+  display: none;
+}
+
+.desktop {
+  display: block;
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (min-width:300px) and (max-width:991px) {
+
+
+  .nav-item {
+    background-color: #ffffff;
+  }
+
+  .navbar-nav {
     width: 100%;
-    height: 100%;
-  }
-  
-  h1, h2, h3, h4, h5, h6, p {
-    font-family: Roboto, sans-serif;
-  }
-  
-  p {
-    text-align: justify;
-  }
-  
-  /********************** NAV **********************/
-
-  .navbar {
-    padding: 0 20px;
+    display: block;
+    text-align: center;
   }
 
-  .nav-logo-div {
-    max-width: 50%;
-  }
-
-  .nav-logo {
-    width: 200px;
-    /* max-width: 50%; */
-  }
-  
-  .nav-link {
-    font-family: Roboto, sans-serif;
-    font-size: 20px;
-    color: #000000 !important;
-  }
-  
-  .nav-link:hover {
-    color: #4285f4!important;
-    transition-property: all;
-    transition-duration: 0.5s;
-  }
-
-  .nav-toggle {
-    border: none;
-  }
-  
   .btn-login {
-    width: 200px;
-    height: 50px;
-    line-height: 40px;
-    background-color: #34a853;
-    border: none;
-    border-radius: 73px;
-    font-family: Roboto, sans-serif;
-    font-size: 20px;
-  }
-  
-  .btn-login a {
-    color: #FFFFFF;
-  }
-  
-  .btn-login:hover{
-    background-color: #25803E;
-    color: #FFFFFF;
-  }
-  
-  .btn-login a:hover {
-    text-decoration: none;
-  }
-  
-  .btn-menu {
     display: none;
   }
 
-  .desktop {
+  .btn-menu {
     display: block;
   }
 
-  .mobile {
+  .nav-logo {
+    height: 70%;
+  }
+
+  .desktop {
     display: none;
   }
-  
-  @media screen and (min-width:300px) and (max-width:991px) {
 
-
-    .nav-item {
-      background-color: #ffffff;
-    }
-  
-    .navbar-nav {
-      width: 100%;
-      display: block;
-      text-align: center;
-    }
-  
-    .btn-login {
-      display: none;
-    }
-  
-    .btn-menu {
-      display: block;
-    }
-  
-    .nav-logo {
-      height: 70%;
-    }
-
-    .desktop {
-      display: none;
-    }
-
-    .mobile {
-      display: block;
-    }
+  .mobile {
+    display: block;
   }
-  
-  .active {
-    letter-spacing: 1px;
-    font-weight: bold;
+}
+
+.active {
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+@media screen and (min-width:300px) and (max-width:401px) {
+
+  .navbar {
+    padding: 0 5px !important;
   }
 
-  @media screen and (min-width:300px) and (max-width:401px) {
+}
 
-    .navbar {
-      padding: 0 5px !important;
-    }
+/****************** SECAO *********************/
 
-  }
+.secao {
+  position: relative;
   
-  /****************** SECAO *********************/
-  
-  .secao {
-    position: relative;
-    
-  }
-  
-  /************* FOOTER ********************/
-  footer {
-    height: 100px;
-    background-color: #4285f4;
-  }
-  
-  footer img {
-    margin-top: 20px;
-  }
-  
-  .final {
-    text-align: center;
-  }
+}
+
+/************* FOOTER ********************/
+footer {
+  height: 100px;
+  background-color: #4285f4;
+}
+
+footer img {
+  margin-top: 20px;
+}
+
+.final {
+  text-align: center;
+}
