--- a/frontend/src/styles/desenvolvendo.css
+++ b/frontend/src/styles/desenvolvendo.css
@@ -8,10 +8,12 @@
   background: transparent url("../../public/assets/seta.png") left center no-repeat;
   padding: 0 0 0 20px;
   margin-left:10px;
+  margin-top: 50px;
   height: 32px;
   border: 1px solid transparent;
   min-width: 120px;
   font-size:16px; 
+  margin: 20px 20px 0 20px;
 }
 
 .botao:hover{
@@ -20,6 +22,7 @@
 }
 
 p{
+  margin-top: 20px;
   font-size:22px; 
 }
 
@@ -40,5 +43,6 @@ p{
 
 .content-box {
   text-align: center;
-  width: 800px;
+  justify-content: center;
+  width: 615px;
 }
